# ec2-deploy

./: Cargo.toml
src/: main.rs
