[package]
name = "ec2-deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
clap = { version = "4.5.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
openssh-sftp-client = { version = "0.14.4", features = ["openssh"] }
serde_json = "1.0.48"
openssh = "0.10.4"
futures = "0.3.30"
zip = "2.1.3"
